--- a/src/app/pages/home/service-centers/service-centers.component.html
+++ b/src/app/pages/home/service-centers/service-centers.component.html
@@ -1,4 +1,3 @@
-
 <div class="service-centers-header">
     <div class="container text-center">
         <h2>Service Centers</h2>
@@ -9,36 +8,32 @@
 <div class="service-centers mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 sticky-image">
                 <img src="./assets/images/service-centers.jpeg" class="img-fluid">
             </div>
             <div class="col-sm-6">
-                <!-- <mat-accordion>
-                    <mat-expansion-panel>
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>
-                                one
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis eligendi, qui fugiat nisi sapiente sed illo voluptatibus atque veritatis eos cupiditate tempora asperiores rem facilis, aspernatur sit nam est. Ipsum?</p>
-                    </mat-expansion-panel>
-                    <mat-expansion-panel>
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>
-                                two
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis eligendi, qui fugiat nisi sapiente sed illo voluptatibus atque veritatis eos cupiditate tempora asperiores rem facilis, aspernatur sit nam est. Ipsum?</p>
-                    </mat-expansion-panel>
-                    <mat-expansion-panel>
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>
-                                three
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis eligendi, qui fugiat nisi sapiente sed illo voluptatibus atque veritatis eos cupiditate tempora asperiores rem facilis, aspernatur sit nam est. Ipsum?</p>
-                    </mat-expansion-panel>
-                </mat-accordion> -->
+                <h3>Our Locations</h3>
+                <div class="accordion">
+                    <div *ngFor="let panel of panels" class="panel">
+                      <div class="panel-header" (click)="togglePanel(panel)">
+                        <span>{{ panel.title }}</span>
+                        <i class="arrow" [ngClass]="{'rotated': panel.expanded}"></i>
+                      </div>
+                      <div *ngIf="panel.expanded" class="panel-content">
+                        <div class="stores-details pt-2">
+                            <h3>{{ panel.shop }}</h3>
+                            <p>{{ panel.address }}</p>
+                            <p><b>Contact Person :</b> {{panel.contactperson}}</p>
+                            <a href="mailto: {{panel.email}}"><b>Email :</b> {{panel.email}}</a><br>
+                            <a href="tel: {{panel.phone1}}"><b>Phone1 :</b> {{panel.phone1}}</a><br>
+                            <a class="mb-1 d-block" href="tel: {{panel.phone2}}"><b>Phone2 :</b> {{panel.phone2}}</a>
+                            <span class="pill-red"><b>State :</b> {{panel.state}}</span>
+                            <span class="pill-blue"><b>City :</b> {{panel.city}}</span>
+                            <a href="{{panel.location}}" target="_blank" class="mt-2 btn btn-primary d-block w-100">View Location</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
