--- a/src/app/pages/home/service-centers/service-centers.component.scss
+++ b/src/app/pages/home/service-centers/service-centers.component.scss
@@ -16,3 +16,72 @@
         color: white;
     }
 }
+
+.accordion {
+    width: 100%;
+  }
+  
+  .panel {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+  
+  .panel-header {
+    background-color: #f5f5f5;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  
+  .panel-header span {
+    flex: 1;
+  }
+  
+  .arrow {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #555;
+    transition: transform 0.3s;
+  }
+  
+  .rotated {
+    transform: rotate(180deg);
+  }
+  
+  .panel-content {
+    padding: 10px;
+  }
+
+  .sticky-image {
+    img {
+        position: sticky;
+        top: 20px;
+    }
+  }
+
+  .stores-details {
+    span.pill-red {
+        background-color: #d51313;
+        color: white;
+        padding: 7px;
+        margin: 10px;
+        border-radius: 30px;
+        /* margin-top: 84px; */
+        font-size: 12px;
+    }
+
+    span.pill-blue {
+        background-color: #0d60be;
+        color: white;
+        padding: 7px;
+        margin: 10px;
+        border-radius: 30px;
+        /* margin-top: 84px; */
+        font-size: 12px;
+    }
+  }
+  
