--- a/src/app/pages/home/trackorder/trackorder.component.html
+++ b/src/app/pages/home/trackorder/trackorder.component.html
@@ -8,18 +8,24 @@
     </div>
     <div *ngIf="orderinfo; else elseBlock">
         <!-- Content to display when condition is true -->
-        <div class="shipping-details">
+        <div class="shipping-details" id="shipment">
             <h4 class="text-center">Shipment Details</h4>
             <table class="table">
                 <tr>
-                    <td>AWB No</td>
-                    <td>Order No</td>
-                    <td>Order Status</td>
+                    <td><b>Track Order</b></td>
+                    <td><b>Waybill No.</b></td>
+                    <td><b>Order Status</b></td>
+                    <td><b>Coustomer</b></td>
+                    <td><b>Payment Mode</b></td>
+                    <td><b>Expected Delivery Date</b></td>
                 </tr>
                 <tr *ngFor="let item of orderinfo">
+                    <td (click)="handleClick(item.AWB_NO)" class="awblink"><i class="fa-solid fa-location-dot"></i> Track Location</td>
                     <td>{{item.AWB_NO}}</td>
-                    <td>{{item.Order_No}}</td>
                     <td>{{item.Order_Status}}</td>
+                    <td>{{item.Cust_Name}}</td>
+                    <td>{{item.Payment_Mode}}</td>
+                    <td>{{item.expected_del_date}}</td>
                 </tr>
             </table>
         </div>
@@ -27,4 +33,12 @@
     <ng-template #elseBlock>
         <!-- Content to display when condition is false -->
     </ng-template>
+    <div class="more-info">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+        </div>
+    </div>
 </div>
