--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -13,7 +13,7 @@
 
                       <div class="widget-call">
                           <i class="icon-phone"></i>
-                          Got Question? Call us 24/7
+                          Got Question? Call us Saturday To Sunday
                           <a href="tel:#">+91 8920896230</a>         
                       </div>
                   </div>
@@ -57,6 +57,7 @@
                           <li><a href="/shippingpolicy">Shipping Policy</a></li>
                           <li><a href="/terms-&-conditions">Terms & Conditions</a></li>
                           <li><a href="/return-policy">Return Policy</a></li>
+                          <li><a href="/service-centers">Service Centers</a></li>
                           <li><a href="https://www.geonix.in/E-Waste%20Page%20Link.pdf">Swach Enviro (E-WASTE)</a></li>
                       </ul>
                   </div>
@@ -70,6 +71,7 @@
                           <li><a routerLink="/shop/dashboard">Sign In</a></li>
                           <li><a routerLink="/shop/cart">View Cart</a></li>
                           <li><a routerLink="/shop/wishlist">My Wishlist</a></li>
+                          <li><a routerLink="/track-order">Track Your Order</a></li>
                           <!-- <li><a href="javascript:;">Track My Order</a></li>
                           <li><a href="javascript:;">Help</a></li> -->
                       </ul>
