--- a/src/app/pages/home/hrform/hrform.component.html
+++ b/src/app/pages/home/hrform/hrform.component.html
@@ -24,7 +24,7 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating')"
                                         [class.active]="star <= selectedRating"></i>
                                 </div>
                             </div>
@@ -38,8 +38,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating1')"
+                                        [class.active]="star <= selectedRating1"></i>
                                 </div>
                             </div>
                         </div>
@@ -52,8 +52,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating2')"
+                                        [class.active]="star <= selectedRating2"></i>
                                 </div>
                             </div>
                         </div>
@@ -66,8 +66,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating3')"
+                                        [class.active]="star <= selectedRating3"></i>
                                 </div>
                             </div>
                         </div>
@@ -80,8 +80,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating4')"
+                                        [class.active]="star <= selectedRating4"></i>
                                 </div>
                             </div>
                         </div>
@@ -95,8 +95,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating5')"
+                                        [class.active]="star <= selectedRating5"></i>
                                 </div>
                             </div>
                         </div>
@@ -109,8 +109,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating6')"
+                                        [class.active]="star <= selectedRating6"></i>
                                 </div>
                             </div>
                         </div>
@@ -123,8 +123,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating7')"
+                                        [class.active]="star <= selectedRating7"></i>
                                 </div>
                             </div>
                         </div>
@@ -137,8 +137,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating8')"
+                                        [class.active]="star <= selectedRating8"></i>
                                 </div>
                             </div>
                         </div>
@@ -151,8 +151,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating9')"
+                                        [class.active]="star <= selectedRating9"></i>
                                 </div>
                             </div>
                         </div>
@@ -164,8 +164,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star)"
-                                        [class.active]="star <= selectedRating"></i>
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating10')"
+                                        [class.active]="star <= selectedRating10"></i>
                                 </div>
                             </div>
                         </div>
