--- a/src/app/pages/home/hrform/hrform.component.html
+++ b/src/app/pages/home/hrform/hrform.component.html
@@ -5,26 +5,63 @@
         </div>
         <div class="col-sm-12">
             <div class="hrform-main">
-                <h3 class="text-center my-5">Manager Feedback Form</h3>
-                <form action="">
+                <h3 class="text-center my-5">Leadership Feedback Form</h3>
+                <form #hrForm="ngForm" (ngSubmit)="onSubmit(hrForm)">
                     <div class="row">
                         <div class="col-6">
-                            <input type="text" placeholder="Employee Name">
+                            <label for="name">Employee Name</label>
+                            <input type="text">
                         </div>
                         <div class="col-6">
-                            <input type="text" placeholder="position">
+                            <label for="position">Position</label>
+                            <input type="text">
                         </div>
                     </div>
-                    <input type="text" placeholder="Department">
+                    <!-- <input type="text" placeholder="Department"> -->
+                    <label for="department">Department</label>
+                    <select name="Department" id="cars">
+                        <option value="" required>-- None --</option>
+                        <option value="Accounts">Accounts</option>
+                        <option value="Human Resources">Human Resources</option>
+                        <option value="Sales">Sales</option>
+                        <option value="Administration">Administration</option>
+                        <option value="Marketing">Marketing</option>
+                        <option value="Purchase">Purchase</option>
+                        <option value="Operations & Services">Operations & Services</option>
+                        <option value="Logistics & Dispatch">Logistics & Dispatch</option>
+                        <option value="E-commerce">E-commerce</option>
+                        <option value="Research & Development">Research & Development</option>
+                    </select>
+                    <div class="rating-div pt-4 px-2">
+                        <div class="row">
+                            <input type="date" max="2023-06-30" min="2023-06-01">
+                        </div>
+                    </div>
+                    <div class="rating-div pt-4">
+                        <div class="row">
+                            <div class="col-sm-9">
+                                <!-- <h4>Personal Communication & Positive body Language</h4>
+                                <p>The ability communicated personally wherever possible understanding the limitaions of electronics communication.</p> -->
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="rating-text">
+                                    <span>Poor</span>
+                                    <span>Excellent</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="rating-div">
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Personal Communication & Positive body Language</h4>
-                                <p>The ability communicated personally wherever possible understanding the limitaions of electronics communication.</p>
+                                <p>The ability communicated personally wherever possible understanding the limitaions of
+                                    electronics communication.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating')"
                                         [class.active]="star <= selectedRating"></i>
                                 </div>
                             </div>
@@ -38,7 +75,8 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating1')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating1')"
                                         [class.active]="star <= selectedRating1"></i>
                                 </div>
                             </div>
@@ -48,11 +86,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Addressing needs & Empathetic</h4>
-                                <p>The ability to respond positively to individual needs, even in circumstances when the needs cannot be met, given all the circumstances & show empathy</p>
+                                <p>The ability to respond positively to individual needs, even in circumstances when the
+                                    needs cannot be met, given all the circumstances & show empathy</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating2')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating2')"
                                         [class.active]="star <= selectedRating2"></i>
                                 </div>
                             </div>
@@ -62,11 +102,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Intellectual flexibility</h4>
-                                <p>The ability to think on one's feet and respond with credible choices, Alternatives and ideas.</p>
+                                <p>The ability to think on one's feet and respond with credible choices, Alternatives
+                                    and ideas.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating3')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating3')"
                                         [class.active]="star <= selectedRating3"></i>
                                 </div>
                             </div>
@@ -76,11 +118,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Emotional intelligence & Negotiation</h4>
-                                <p>The ability to be self-aware, self-regulate, motivate, show empathy and be Socially adept. The ability to negotiate a successful outcome in an interaction.</p>
+                                <p>The ability to be self-aware, self-regulate, motivate, show empathy and be Socially
+                                    adept. The ability to negotiate a successful outcome in an interaction.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating4')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating4')"
                                         [class.active]="star <= selectedRating4"></i>
                                 </div>
                             </div>
@@ -90,12 +134,15 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Reliability & Fairness</h4>
-                                <p>The ability to do what one says & be open in interaction. The ability t be fair to anyone in an interaction,
-                                    Taking account of all the Circumstances, and to explain clearly the position that is taken and the reason</p>
+                                <p>The ability to do what one says & be open in interaction. The ability t be fair to
+                                    anyone in an interaction,
+                                    Taking account of all the Circumstances, and to explain clearly the position that is
+                                    taken and the reason</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating5')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating5')"
                                         [class.active]="star <= selectedRating5"></i>
                                 </div>
                             </div>
@@ -105,11 +152,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Humility</h4>
-                                <p>The ability to acknowledge mistakes, misunderstanding, errors and fault, and to apologise where necessary.</p>
+                                <p>The ability to acknowledge mistakes, misunderstanding, errors and fault, and to
+                                    apologise where necessary.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating6')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating6')"
                                         [class.active]="star <= selectedRating6"></i>
                                 </div>
                             </div>
@@ -119,11 +168,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Encourage contribution</h4>
-                                <p>The ability to motivate and encourage others to make a contribution in interaction.</p>
+                                <p>The ability to motivate and encourage others to make a contribution in interaction.
+                                </p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating7')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating7')"
                                         [class.active]="star <= selectedRating7"></i>
                                 </div>
                             </div>
@@ -133,11 +184,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Verbally Aggressive/Angry Behaviour</h4>
-                                <p>A personality trait that predisposes persons to attack the self-concepts of other people. It include shouting, Swearing, insults, and unkind remarks.</p>
+                                <p>A personality trait that predisposes persons to attack the self-concepts of other
+                                    people. It include shouting, Swearing, insults, and unkind remarks.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating8')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating8')"
                                         [class.active]="star <= selectedRating8"></i>
                                 </div>
                             </div>
@@ -147,11 +200,13 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <h4>Conflict resolution</h4>
-                                <p>The ability to confront a conflict at the time of conflict and to try and resolve any Dispute at the time of the dispute.</p>
+                                <p>The ability to confront a conflict at the time of conflict and to try and resolve any
+                                    Dispute at the time of the dispute.</p>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating9')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating9')"
                                         [class.active]="star <= selectedRating9"></i>
                                 </div>
                             </div>
@@ -160,11 +215,13 @@
                     <div class="rating-div">
                         <div class="row">
                             <div class="col-sm-9">
-                                <h4>On scale of 5, how satisfactorily he contribute or help in smooth Channelization of your responsibilities?</h4>
+                                <h4>How satisfactorily he/she contribute or help in smooth Channelization of your
+                                    responsibilities?</h4>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <i class="fa-solid fa-star" *ngFor="let star of stars" (click)="setRating(star,'selectedRating10')"
+                                    <i class="fa-solid fa-star" *ngFor="let star of stars"
+                                        (click)="setRating(star,'selectedRating10')"
                                         [class.active]="star <= selectedRating10"></i>
                                 </div>
                             </div>
@@ -173,24 +230,26 @@
                     <div class="rating-div">
                         <div class="row">
                             <div class="col-sm-9">
-                                <h4>Overall Rating (Out of 6)</h4>
+                                <h4>Overall Rating (Out of 5)</h4>
                             </div>
                             <div class="col-sm-3">
                                 <div class="rating">
-                                    <input type="number" min="1" max="6" maxlength="1" style="width: 20%; text-align: center;">
+                                    <h3>{{ (newrating) }}</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="rating-div">
                         <h4>Positive Feedback (List Key Points)</h4>
-                        <textarea style="width: 100%; height: 200px; margin-top: 10px; border: 1px solid lightgray; border-radius: 10px;">
-                            
+                        <textarea
+                            style="width: 100%; height: 200px; margin-top: 10px; border: 1px solid lightgray; border-radius: 10px;" value="1. ">
+
                         </textarea>
                     </div>
                     <div class="rating-div">
                         <h4>Facing Problems/Improvement Required/Feedback (List Key Points)</h4>
-                        <textarea style="width: 100%; height: 200px; margin-top: 10px; border: 1px solid lightgray; border-radius: 10px;">
+                        <textarea
+                            style="width: 100%; height: 200px; margin-top: 10px; border: 1px solid lightgray; border-radius: 10px;">
 
                         </textarea>
                     </div>
