--- a/src/app/pages/shop/checkout/checkout.component.html
+++ b/src/app/pages/shop/checkout/checkout.component.html
@@ -261,17 +261,17 @@
 
                                 <div>
                                     <div class="form-check first_box">
-                                        <input class="form-check-input" type="radio" value="RZP" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <input class="form-check-input" type="radio" value="RZP" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault1" checked>
                                         <label class="form-check-label" for="flexRadioDefault1">
                                           Online Payment
                                         </label>
                                       </div>
-                                      <div class="form-check second_box">
+                                      <!-- <div class="form-check second_box">
                                         <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2" checked>
                                         <label class="form-check-label" for="flexRadioDefault2">
                                           Cash on Delivery
                                         </label>
-                                      </div>
+                                      </div> -->
                                 </div> 
                               
                                   
