--- a/src/app/pages/shop/productcheckout/productcheckout.component.scss
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.scss
@@ -19,7 +19,7 @@
     }
 }
 
-@keyframes couponborder {
-    0% { box-shadow: 0px 0px 0 1px #f56d08; }
-    100% { box-shadow: 0px 0px 0px 7px #f56f0800 }
-}
+// @keyframes couponborder {
+//     0% { box-shadow: 0px 0px 0 1px #f56d08; }
+//     100% { box-shadow: 0px 0px 0px 7px #f56f0800 }
+// }
