--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -13,7 +13,7 @@
 
                       <div class="widget-call">
                           <i class="icon-phone"></i>
-                          Got Question? Call us Saturday To Sunday
+                          Got Question? Call us Monday to Saturday
                           <a href="tel:#">+91 8920896230</a>         
                       </div>
                   </div>
