--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -365,7 +365,7 @@
         </div>
     </div>
 
-    <div class="gallery py-5">
+    <!-- <div class="gallery py-5">
         <div class="container">
             <div class="heading">
                 <h2>Ice Cream Shop <i class="fa-solid fa-images"></i></h2>
@@ -414,7 +414,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <div class="insta-post mt-3">
         <div class="heading text-center">
