--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -222,11 +222,11 @@
                                         </tr>
                                         <tr>
                                             <td>Shipping:</td>
-                                            <td>Free shipping</td>
+                                            <td><i class="fa-solid fa-indian-rupee-sign"></i>{{ priceoncod }}</td>
                                         </tr>
                                         <tr class="summary-total">
                                             <td>Total:</td>
-                                            <td><i class="fa-solid fa-indian-rupee-sign"></i>{{discountoffer}}</td>
+                                            <td><i class="fa-solid fa-indian-rupee-sign"></i>{{discountoffer + priceoncod}}</td>
                                         </tr>
                                         <div class="checkout-discount" style="width: 150%">
                                             <div class="coupon-div" id="checkout-discount-form">
@@ -254,18 +254,19 @@
                                 </table>
 
                                  <div>
+                                    <h6><i class="fa-solid fa-circle-exclamation"></i> {{ deliverytext }}</h6>
                                     <div class="form-check first_box">
                                         <input class="form-check-input" type="radio" value="RZP" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault1" checked>
                                         <label class="form-check-label" for="flexRadioDefault1">
                                           Online Payment
                                         </label>
                                       </div>
-                                      <!-- <div class="form-check second_box">
-                                        <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                                      <div class="form-check second_box">
+                                        <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2">
                                         <label class="form-check-label" for="flexRadioDefault2">
                                           Cash on Delivery
                                         </label>
-                                      </div> -->
+                                      </div>
                                 </div> 
 
                                 <!-- <molla-accordion adClass="accordion-summary" id="accordion-payment">
