updated return policy

--- a/src/app/pages/home/returnexchange/returnexchange.component.html
+++ b/src/app/pages/home/returnexchange/returnexchange.component.html
@@ -6,7 +6,7 @@
                 <li class="breadcrumb-item">
                     <a routerLink="/">Home</a>
                 </li>
-                <li class="breadcrumb-item active">Return & Exchange</li>
+                <li class="breadcrumb-item active">Exchange</li>
             </ol>
         </div>
     </nav>
@@ -16,72 +16,39 @@
             <div class="row">
                 <div class="col-lg-12 order_policy">
                     <h1>Exchange</h1>
+                    <p>Geonix’s 7-days exchange policy gives you an option to exchange items purchased from the website/m-site for any reason within 7 days of receipt of the item. We only ask that you don't use the product and preserve its original condition, tags, and packaging. You are welcome to try on a product, but please take adequate measures to preserve its condition.</p>
+                    <p>Kindly note, all exchanges are subject to stock availability. Please also note that don’t offer any size exchanges. </p>
 
-                    <p> Geonix’s 7-days exchange policy gives you an option to exchange items purchased from the website/m-site for any reason within 7 days of receipt of the item. We only ask that you don't use the product and preserve its original condition, tags, and packaging. You are welcome to try on a product, but please take adequate measures to preserve its condition.</p>
-
-                    <p>Kindly note, all exchanges are subject to stock availability. Please also note that we only offer size exchanges. If you wish to exchange your item for an alternate product, we suggest that you return it to obtain store credit and purchase the new item separately.</p>
-
-                    <p>The following EXCEPTIONS and RULES apply to our 7-days Return & Exchange Policy:</p>
-
+                    <h4 class="mt-2">The following EXCEPTIONS and RULES apply to our 7-days Exchange Policy</h4>
                     <p>All items to be exchanged must be unused and should be in their original condition with all tags and packaging intact (e.g., shoes must be packed in the original shoe box).</p>
-
                     <p>We only accept exchanges for products purchased directly from Geonix’s website, mobile site. Any exchange request for products purchased from our indirect online and offline distributors will be declined by us.</p>
 
-                    <p>Please note that we do not refund the shipping or COD charges incurred by you.</p>
-
-                    <p>The exchange policy allows for only size exchanges.</p>
-
-                    <p>If you self-ship your exchange, kindly pack the items securely to prevent any loss or damage during transit. For all self-shipped exchanges, we recommend you use a reliable courier service. A fixed amount of Rs. 100 will be reimbursed subject to the exchange having met our Returns and Exchange Policy.</p>
-
+                    <h4 class="mt-2">Please note that we do not refund the shipping or COD charges incurred by you.</h4>
+                    <p>If you self-ship your exchange, kindly pack the items securely to prevent any loss or damage during transit. For all self-shipped exchanges, we recommend you use a reliable courier service. </p>
                     <p>Please check the items, type of exchange, and other related details carefully. Our courier partner will pick up only the items mentioned at the time of submitting the exchange request by you.</p>
-
                     <p>In case the items handed over to the courier person don't match the details of the items mentioned in the exchange request, we will conduct an internal probe and get back to you accordingly.</p>
-
                     <p>If you self-ship any product without officially informing us through our exchange process, we will not process the exchange.</p>
 
                     <h4 class="mt-2">How do I Exchange products purchased from Geonix?</h4>
                     <p>You can exchange products purchased from Geonix within 7 days of receiving the product. Please follow these steps:</p>
-                    <ol>
-                        <li>1. <p class="mb-1"> Click on 'Exchange’ under the “My Orders” section of the Geonix Website/M-site and follow the instructions. Please make a note of the Exchange ID that is generated at the end of the process.</p>
-                        <li>2. <p class="mb-1">Please note, if the mode of payment for the order was Cash on Delivery,
-                                you have the option to get the money refunded to a
-                                bank account of your choice or take the refund as Geonix store credits for future
-                                purchases with us. If you choose a
-                                bank transfer, please ensure the bank account details you enter are accurate and
-                                complete.Geonix will
-                                not validate a bank account number and will not be responsible for funds transferred to
-                                an unintended recipient.
-                            </p>
-                        <li>3. <p class="mb-1">Please note, if the mode of payment for the order was Cash on Delivery, you have the option to get the money refunded to a bank account of your choice or take the refund as Geonix store credits for future purchases with us. If you choose a bank transfer, please ensure the bank account details you enter are accurate and complete. Geonix will not validate a bank account number and will not be responsible for funds transferred to an unintended recipient.</p>
-                        <li>4. <p class="mb-1">We offer a pick-up facility in select locations based on our courier serviceability. If you select to schedule a pick-up, please place the product(s) in a packet. The product(s) must be unused, unwashed, and all the tags should be intact. We will pick up the exchange within 1 - 3 business days from the request placement date. Keep the packet ready to expedite the exchange pickup.</p>
-                        <li>5. <p class="mb-1">We offer a pick-up facility in selected locations based on our courier serviceability. If you select to schedule a pick-up, please place the product(s) in a packet. The product(s) must be unused, unwashed, and all the tags should be intact. We will pick up the exchange within 1 - 3 business days from the request placement date. Keep the packet ready to expedite the pickup, and the tags are intact. Please do mention the Order No. and Exchange ID on a piece of paper and place it in the packet. Kindly address the package to the following address:</p>
-                    </ol>
+                    <p>Click on 'Exchange’ under the “My Orders” section of the Geonix Website/M-site and follow the instructions. Please make a note of the Exchange ID that is generated at the end of the process.</p>
+                    <p>Geonix will not validate a bank account number and will not be responsible for funds transferred to an unintended recipient.</p>
+                    <p>We offer a pick-up facility in selected locations based on our courier serviceability. If you select to schedule a pick-up, please place the product(s) in a packet. The product(s) must be unused, unwashed, and all the tags should be intact. We will pick up the exchange within 1 - 3 business days from the request placement date. Keep the packet ready to expedite the pickup, and the tags are intact. Please do mention the Order No. and Exchange ID on a piece of paper and place it in the packet. Kindly address the package to the following address:</p>
+                    <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- 962536905 before shipping.Any product self-shipped after 7 days of raising an exchange request will not be considered. We will send you a confirmation email as soon as we receive the shipment at our warehouse.</p>
 
-                    <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- [phone number] for us to initiate the Rs. 100 store credits to your account, valid for all your future purchases with Geonix. Any product self-shipped after 7 days of raising an exchange request will not be considered. We will send you a confirmation email as soon as we receive the shipment at our warehouse.</p>
-                    
-                    <h4 class="mt-2">How do I place an exchange request on Geonix? </h4>
+                    <h4 class="mb-2">How do I place an exchange request on Geonix?</h4>
                     <p>If you want to exchange products purchased from Geonix, please follow the below-mentioned steps:</p>
+                    <p>You can create an exchange request for products purchased from Geonix within 7 days of its delivery under the “My Orders” section of the Geonix Website/M-site.</p>
+                    <p>We offer a pick-up facility in select locations based on our courier serviceability. If you select to schedule a pick-up, please place the product(s) in a packet. The product(s) must be unused, unwashed, and all the tags should be intact. We will pick up the exchange within 1 - 3 business days from the exchange request placement date.</p>
+                    <p>Once your product is picked, the exchange process will be initiated within 24-48 business hours. A new product in the size you requested will be dispatched to you in the following 48-72 business hours.</p>
+                    <p>If the reverse pick-up option is not available at your location, you can self-ship the product(s) to us by any reliable courier service within 7 days of raising an exchange request. Please pack the product(s) and ensure that it is unused, unwashed, and all the tags are intact. Please do mention the Order No. and Exchange ID on a piece of paper and place it in the packet. Kindly address the package to the following address:</p>
+                    <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- 962536905 before Shipping. Any product self-shipped after 7 days of raising an exchange request will not be considered. We will send you a confirmation email as soon as we receive the shipment at our warehouse.</p>
+                    <p>Once we receive the product, it will go through a quality check at our warehouse post which we will initiate the exchange process in the next 24-48 business hours. A brand new product in the size you requested will be dispatched to you in the following 48-72 business hours.</p>
+                    <p>Please note that if the exchange size is not available at our warehouse, we will contact you to convert your exchange into store credit or refund, as per your preference.</p>
+                    <p>In case you face any size issue with the exchanged product as well, please note that we will not provide a further exchange. You may self-ship the exchange back to us, and we will process store credit/refund for the same (excluding Shipping and/or COD charges) as per your preference.</p>
 
-                    <ol>
-                        <li>1. <p class="mb-1"> You can create an exchange request for products purchased from Geonix within 7 days of its delivery under the “My Orders” section of the Geonix Website/M-site. </p></li>
-                        <li>2. <p class="mb-1">We offer a pick-up facility in select locations based on our courier serviceability. If you select to schedule a pick-up, please place the product(s) in a packet. The product(s) must be unused, unwashed, and all the tags should be intact. We will pick up the exchange within 1 - 3 business days from the exchange request placement date. </p></li>
-                        <li>3. <p class="mb-1">Once your product is picked, the exchange process will be initiated within 24-48 business hours. A new product in the size you requested will be dispatched to you in the following 48-72 business hours.</p></li>
-                        <li>4. <p class="mb-1"> If the reverse pick-up option is not available at your location, you can self-ship the product(s) to us by any reliable courier service within 7 days of raising an exchange request. Please pack the product(s) and ensure that it is unused, unwashed, and all the tags are intact. Please do mention the Order No. and Exchange ID on a piece of paper and place it in the packet. Kindly address the package to the following address:</p></li>
-                            <!-- <p class="paragraph">Brusa King Private Limited. </p>
-                            <p class="paragraph">H-9, Sector-33 </p>
-                            <p class="paragraph">Gurgaon  </p>
-                            <p class="paragraph">Haryana - 122001 </p>
-                            <p class="paragraph">India </p> -->
-                            <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- [phone number] for us to initiate the Rs. 100 store credits to your account, valid for all your future purchases with Geonix. Any product self-shipped after 7 days of raising an exchange request will not be considered. We will send you a confirmation email as soon as we receive the shipment at our warehouse.</p>
-                        <li>5. <p class="mb-1">Once we receive the product, it will go through a quality check at our warehouse post which we will initiate the exchange process in the next 24-48 business hours. A brand new product in the size you requested will be dispatched to you in the following 48-72 business hours.</p></li>
-                        <li>6. <p class="mb-1">Please note that if the exchange size is not available at our warehouse, we will contact you to convert your exchange into store credit or refund, as per your preference.</p></li>
-                        <li>7. <p class="mb-1">In case you face any size issue with the exchanged product as well, please note that we will not provide a further exchange. You may self-ship the exchange back to us, and we will process store credit/refund for the same (excluding Shipping and/or COD charges) as per your preference. </p></li>
-                    </ol>
-
-                    <h4>What should I do if I receive a damaged/defective/incomplete/wrong order from Geonix?</h4>
-
-                    <p>For any defective/damaged/incomplete/wrong order delivered, we request you to inform us within 48 hours of receiving the order with the images of the product received. You can do so by clicking on 'Exchange’ under the ‘My Orders’ section of the Website/M-site and follow the instructions to upload the images. Please keep in mind the following:</p>
-
+                    <h4 class="mt-2">What should I do if I receive a damaged/defective/incomplete/wrong order from Geonix?</h4>
+                    <p>For any defective/damaged/incomplete/wrong order delivered, we request you to inform us on our WhatsApp No.  +91- 8920896230  within 48 hours of receiving the order with the images of the product received. You can do so by clicking on 'Exchange’ under the ‘My Orders’ section of the Website/M-site and follow the instructions to upload the images. Please keep in mind the following:</p>
                     <p>You need to upload a minimum of 3 images showcasing the issue with the delivered product.</p>
                 </div>
             </div>
