--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -56,7 +56,7 @@
                           <li><a href="/warranty">Warranty policy</a></li>
                           <li><a href="/shippingpolicy">Shipping Policy</a></li>
                           <li><a href="/terms-&-conditions">Terms & Conditions</a></li>
-                          <li><a href="/return-policy">Return Policy</a></li>
+                          <li><a href="/return-policy">Exchange Policy</a></li>
                           <li><a href="/service-centers">Service Centers</a></li>
                           <li><a href="https://www.geonix.in/E-Waste%20Page%20Link.pdf">Swach Enviro (E-WASTE)</a></li>
                       </ul>
