change second slider images

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -216,7 +216,7 @@
         <owl-carousel carouselClasses="category-banners-slider owl-simple owl-nav-inside" [options]="introSlider">
             <div class="banner banner-poster bg-gray">
                 <a href="javascript:;">
-                    <img src="../../../../assets/images/new_topheader.jpg" alt="Banner">
+                    <img src="./assets/images/MOTHERBOARD BANNER 1920X500.jpg" alt="Banner">
                 </a>
 
                 <div class="banner-content banner-content-right">
@@ -231,7 +231,7 @@
 
             <div class="banner banner-poster bg-gray">
                 <a routerLink="/shop/sidebar/list">
-                    <img src="/assets/images/home/sliders/web_banner.jpg" alt="Banner">
+                    <img src="./assets/images/HDD BANNER 1920X500.jpg" alt="Banner">
                 </a>
 
                 <!-- <div class="banner-content">
